[tool.poetry]
name = "mycelium-test"
version = "0.1.0"
description = "Automated testing framework for collaborating LLM-based agents"
authors = ["Vlad Severin <severinv42@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.scripts]
myc-test = "src.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
PyYAML = "^6.0.1"
schema = "^0.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
