[tool.poetry]
name = "myctest"
version = "0.1.0"
description = "Automated testing framework for collaborating LLM-based agents"
authors = ["Vlad Severin <severinv42@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
myc-test = "myctest.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
PyYAML = "^6.0.1"
schema = "^0.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
